data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_274.wast
;; 5. Use `nop` instructions inside a loop with compound conditions involving `br_if`. Ensure the loop respects the conditions and exits correctly instead of resulting in infinite execution.

(assert_invalid
  (module
    (func $test-loop-br_if (param $i i32)
      (local $j i32)
      (block 
        (loop 
          (local.get $i)
          (i32.const 10)
          (i32.gt_s)
          (br_if 1)
          (nop)
          (local.get $j)
          (i32.const 0)
          (i32.eqz)
          (br_if 0)
          (local.set $j (i32.add (local.get $j) (i32.const 1)))
          (nop)
        )
      )
    )
  )
  "loop termination issue"
)